fix quick submit button on mobile screen

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -279,6 +279,7 @@
   }
   .home-quick-sumbit__floating-action-button { 
     display: flex;
+    bottom: 120px;
   }
 }
 
